# gr-electrosense

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: electrosenseConfig.cmake  targetConfig.cmake.in
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.swig_doc.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
examples/: electrosense_all.grc  electrosense_final.py  electrosense_hopping.grc  electrosense_hopping.py  electrosense_hopping_nogui.grc  electrosense_mqtt_test.grc  electrosense_mqtt_test.py  electrosense_sink_test.grc  electrosense_uhd.grc  scanning.py
grc/: CMakeLists.txt  electrosense_discard_samples.block.yml  electrosense_mqtt_client.block.yml  electrosense_rpi_gpufft.block.yml  electrosense_sensor_sink.block.yml  electrosense_variable_updater.block.yml
include/electrosense/: CMakeLists.txt  api.h  discard_samples.h  rpi_gpufft.h
lib/: CMakeLists.txt  discard_samples_impl.cc  discard_samples_impl.h  rpi_gpufft_impl.cc  rpi_gpufft_impl.h
python/: CMakeLists.txt  FullSchema.avsc  __init__.py  avro_parser.py  message_handler.py  mqtt_client.py  sensor_manager.py  sensor_sink.py  variable_updater.py
python/bindings/: CMakeLists.txt  discard_samples_python.cc  python_bindings.cc  rpi_gpufft_python.cc
python/bindings/docstrings/: discard_samples_pydoc_template.h  rpi_gpufft_pydoc_template.h
swig/: CMakeLists.txt  electrosense_swig.i
